Bug 415774 - Cannot copy event from readonly ressource
Summary: Cannot copy event from readonly ressource
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.12.3
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-01 18:41 UTC by Joerg Schiermeier
Modified: 2023-04-22 16:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joerg Schiermeier 2020-01-01 18:41:07 UTC
It isn't possible to copy an event from a ics ressource which is set to "read only". This should be possible e.g. to copy an event from an "read only" ressouce like an archived ics file from last year for example.


STEPS TO REPRODUCE
1. Create an event in your actual ics based calendar
2. Create a new ics based calender and add it to KOrganizer
3. Try to copy the event from 1. with "copy"

OBSERVED RESULT
In the contextual menu (right click) "copy" isn't available because it is greyed out.

EXPECTED RESULT
In the contextual menu (right click) "copy" should be avaiable like in "edit" from menu.



SOFTWARE/OS VERSIONS
Linux: Linux 5.2.0-3-amd64 #1 SMP Debian 5.2.17-1 (2019-09-26) x86_64 GNU/Linux
(available in About System)
KDE Plasma Version: 5.14.5
KDE Frameworks Version: 5.62.0
Qt Version: 5.12.5

ADDITIONAL INFORMATION
n/a
Comment 1 Daniel Vrátil 2023-04-22 16:42:13 UTC
Git commit 3f908c61b1c57b7ebcbc4b108aa07be9f37e5cfd by Daniel Vrátil.
Committed on 22/04/2023 at 16:41.
Pushed by dvratil into branch 'release/23.04'.

Allow copying events from read-only calendars

It makes sense that the "Cut" and "Paste" actions are disabled in
incidence popup menu when the calendar is read-only, but "Copying"
can be enabled just fine.
FIXED-IN: 23.04.1

M  +34   -6    src/koeventpopupmenu.cpp

https://invent.kde.org/pim/korganizer/commit/3f908c61b1c57b7ebcbc4b108aa07be9f37e5cfd