Allow copying events from read-only calendars

It makes sense that the "Cut" and "Paste" actions are disabled in
incidence popup menu when the calendar is read-only, but "Copying"
can be enabled just fine.

BUG: 415774
FIXED-IN: 23.04.1